commit on 'master'

--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "q-learning",
     "qlearning"
   ],
-  "author": "",
+  "author": "Orville Daley Jr",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/crypto-cmd/AI-Lib/issues"
